----------------------------------
[2009-10-11 Ver 0.53 -> 0.54]
- Fixed bug about session id exists in link tag for Mobile Link Discovery.
- Fixed bug about encoding salt exists in bottom of contents.(thx Vane)
----------------------------------
[2009-09-20 Ver 0.52 -> 0.53]
- Deleted constant 'WIZIN_SALT'.
- Deleted method 'Wizin_Util::salt' and Added method 'Wizin::salt'.
- Modified mobile plugins, delete empty method.
- Modified mobile plugins, call parent::_require().
- Modified mobile plugin, call method that check location header.
- Added logic into Wizin_Crypt, create iv from salt and filepath.
----------------------------------
[2009-09-18 Ver 0.51 -> 0.52]
- Removed 'PEAR::Mail'.
- Added 'Qdmail'.
- Added 'PEAR::Crypt_Blowfish'.
- Renamed trans_sid filter, and modified logic for external links.
- Modified function args type.
- Added method 'fprefix' into Wizin_Util.
- Fixed some notice messages in Wizin_User.
----------------------------------
[2009-09-15 Ver 0.50 -> 0.51]
- Added functions for get header info.
- Added image resize logic for uploaded file.
----------------------------------
[2009-09-13 Ver 0.49 -> 0.50]
- Importd 'Jsphon'.
----------------------------------
[2009-06-25 Ver 0.48 -> 0.49]
- Fixed bug with css filter when multibyte string not exists in output contents.
----------------------------------
[2009-06-24 Ver 0.47 -> 0.48]
- Fixed bug about resize width/height is lower than 1 pixel, imagecreatetruecolor cannot create new image.(thx takahashi)
- Fixed bug about preg_match pattern.(thx argon)
- Added 'Mobile Link Discovery' tag insert logic.
- Added client plugin for 'Livedoor' and 'Mixi'.
- Added content-type variable in Wizin_User class.
- Fixed bug about call function of non-object.
- Fixed bug about needless html tag added.(thx mbxoops)
- Updated ke-tai_list.csv
- Updated 'HTML_CSS_Mobile'.
- Imported 'HTML_CSS_Selecter2XPath'.
----------------------------------
[2009-05-21 Ver 0.46 -> 0.47]